peace/antlr/generated/PeaceParser.py
# Generated from c:\Users\nick\Documents\CSUN\COMP430\peace\peace\antlr\Peace.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PeaceParser ( Parser ):

    grammarFileName = "Peace.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "'bool'", "'void'", 
                     "'string'", "'enum'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'let'", 
                     "'true'", "'false'", "'->'", "'while'", "'if'", "'else'", 
                     "'return'", "'func'", "'print'", "'match'", "'=>'", 
                     "'_'", "'='", "'&'", "':'", "';'", "'('", "')'", "'{'", 
                     "'}'", "'\"'", "','" ]

    symbolicNames = [ "<INVALID>", "Int", "Float", "Bool", "Void", "String", 
                      "Enum", "Add", "Subtract", "Multiply", "Divide", "Modulo", 
                      "LessThan", "GreaterThan", "LessThanOrEq", "GreaterThanOrEq", 
                      "Equal", "NotEqual", "Let", "BoolTrue", "BoolFalse", 
                      "Arrow", "While", "If", "Else", "Return", "Function", 
                      "Print", "Match", "MatchArrow", "Any", "Assign", "Amp", 
                      "Colon", "Semicolon", "LParen", "RParen", "LBracket", 
                      "RBracket", "DoubleQuote", "Comma", "WS", "Newline", 
                      "Line_Comment", "Comment", "Identifier", "Digits", 
                      "FloatConst", "StringLiteral" ]

    RULE_basetype = 0
    RULE_funcpointertype = 1
    RULE_atype = 2
    RULE_op = 3
    RULE_expression = 4
    RULE_vardec = 5
    RULE_statement = 6
    RULE_block = 7
    RULE_case_ = 8
    RULE_pattern = 9
    RULE_parameter = 10
    RULE_func_stmt = 11
    RULE_cdef = 12
    RULE_enumdef = 13
    RULE_program = 14

    ruleNames =  [ "basetype", "funcpointertype", "atype", "op", "expression", 
                   "vardec", "statement", "block", "case_", "pattern", "parameter", 
                   "func_stmt", "cdef", "enumdef", "program" ]

    EOF = Token.EOF
    Int=1
    Float=2
    Bool=3
    Void=4
    String=5
    Enum=6
    Add=7
    Subtract=8
    Multiply=9
    Divide=10
    Modulo=11
    LessThan=12
    GreaterThan=13
    LessThanOrEq=14
    GreaterThanOrEq=15
    Equal=16
    NotEqual=17
    Let=18
    BoolTrue=19
    BoolFalse=20
    Arrow=21
    While=22
    If=23
    Else=24
    Return=25
    Function=26
    Print=27
    Match=28
    MatchArrow=29
    Any=30
    Assign=31
    Amp=32
    Colon=33
    Semicolon=34
    LParen=35
    RParen=36
    LBracket=37
    RBracket=38
    DoubleQuote=39
    Comma=40
    WS=41
    Newline=42
    Line_Comment=43
    Comment=44
    Identifier=45
    Digits=46
    FloatConst=47
    StringLiteral=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BasetypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Int(self):
            return self.getToken(PeaceParser.Int, 0)

        def Float(self):
            return self.getToken(PeaceParser.Float, 0)

        def Bool(self):
            return self.getToken(PeaceParser.Bool, 0)

        def Void(self):
            return self.getToken(PeaceParser.Void, 0)

        def String(self):
            return self.getToken(PeaceParser.String, 0)

        def Identifier(self):
            return self.getToken(PeaceParser.Identifier, 0)

        def getRuleIndex(self):
            return PeaceParser.RULE_basetype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBasetype" ):
                listener.enterBasetype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBasetype" ):
                listener.exitBasetype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBasetype" ):
                return visitor.visitBasetype(self)
            else:
                return visitor.visitChildren(self)




    def basetype(self):

        localctx = PeaceParser.BasetypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_basetype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PeaceParser.Int) | (1 << PeaceParser.Float) | (1 << PeaceParser.Bool) | (1 << PeaceParser.Void) | (1 << PeaceParser.String) | (1 << PeaceParser.Identifier))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncpointertypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LParen(self):
            return self.getToken(PeaceParser.LParen, 0)

        def basetype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PeaceParser.BasetypeContext)
            else:
                return self.getTypedRuleContext(PeaceParser.BasetypeContext,i)


        def RParen(self):
            return self.getToken(PeaceParser.RParen, 0)

        def Arrow(self):
            return self.getToken(PeaceParser.Arrow, 0)

        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(PeaceParser.Comma)
            else:
                return self.getToken(PeaceParser.Comma, i)

        def getRuleIndex(self):
            return PeaceParser.RULE_funcpointertype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncpointertype" ):
                listener.enterFuncpointertype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncpointertype" ):
                listener.exitFuncpointertype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncpointertype" ):
                return visitor.visitFuncpointertype(self)
            else:
                return visitor.visitChildren(self)




    def funcpointertype(self):

        localctx = PeaceParser.FuncpointertypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcpointertype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(PeaceParser.LParen)
            self.state = 33
            self.basetype()
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PeaceParser.Comma:
                self.state = 34
                self.match(PeaceParser.Comma)
                self.state = 35
                self.basetype()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 41
            self.match(PeaceParser.RParen)
            self.state = 42
            self.match(PeaceParser.Arrow)
            self.state = 43
            self.basetype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basetype(self):
            return self.getTypedRuleContext(PeaceParser.BasetypeContext,0)


        def funcpointertype(self):
            return self.getTypedRuleContext(PeaceParser.FuncpointertypeContext,0)


        def getRuleIndex(self):
            return PeaceParser.RULE_atype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtype" ):
                listener.enterAtype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtype" ):
                listener.exitAtype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtype" ):
                return visitor.visitAtype(self)
            else:
                return visitor.visitChildren(self)




    def atype(self):

        localctx = PeaceParser.AtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_atype)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PeaceParser.Int, PeaceParser.Float, PeaceParser.Bool, PeaceParser.Void, PeaceParser.String, PeaceParser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.basetype()
                pass
            elif token in [PeaceParser.LParen]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.funcpointertype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Add(self):
            return self.getToken(PeaceParser.Add, 0)

        def Subtract(self):
            return self.getToken(PeaceParser.Subtract, 0)

        def Multiply(self):
            return self.getToken(PeaceParser.Multiply, 0)

        def Divide(self):
            return self.getToken(PeaceParser.Divide, 0)

        def Modulo(self):
            return self.getToken(PeaceParser.Modulo, 0)

        def getRuleIndex(self):
            return PeaceParser.RULE_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp" ):
                listener.enterOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp" ):
                listener.exitOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp" ):
                return visitor.visitOp(self)
            else:
                return visitor.visitChildren(self)




    def op(self):

        localctx = PeaceParser.OpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PeaceParser.Add) | (1 << PeaceParser.Subtract) | (1 << PeaceParser.Multiply) | (1 << PeaceParser.Divide) | (1 << PeaceParser.Modulo))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PeaceParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class BoolExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PeaceParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BoolTrue(self):
            return self.getToken(PeaceParser.BoolTrue, 0)
        def BoolFalse(self):
            return self.getToken(PeaceParser.BoolFalse, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolExpr" ):
                listener.enterBoolExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolExpr" ):
                listener.exitBoolExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolExpr" ):
                return visitor.visitBoolExpr(self)
            else:
                return visitor.visitChildren(self)


    class IdentExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PeaceParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(PeaceParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentExpr" ):
                listener.enterIdentExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentExpr" ):
                listener.exitIdentExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentExpr" ):
                return visitor.visitIdentExpr(self)
            else:
                return visitor.visitChildren(self)


    class FloatExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PeaceParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FloatConst(self):
            return self.getToken(PeaceParser.FloatConst, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloatExpr" ):
                listener.enterFloatExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloatExpr" ):
                listener.exitFloatExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatExpr" ):
                return visitor.visitFloatExpr(self)
            else:
                return visitor.visitChildren(self)


    class ArithmeticExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PeaceParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PeaceParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PeaceParser.ExpressionContext,i)

        def op(self):
            return self.getTypedRuleContext(PeaceParser.OpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticExpr" ):
                listener.enterArithmeticExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticExpr" ):
                listener.exitArithmeticExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticExpr" ):
                return visitor.visitArithmeticExpr(self)
            else:
                return visitor.visitChildren(self)


    class StringLiteralExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PeaceParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def StringLiteral(self):
            return self.getToken(PeaceParser.StringLiteral, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringLiteralExpr" ):
                listener.enterStringLiteralExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringLiteralExpr" ):
                listener.exitStringLiteralExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringLiteralExpr" ):
                return visitor.visitStringLiteralExpr(self)
            else:
                return visitor.visitChildren(self)


    class DigitExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PeaceParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Digits(self):
            return self.getToken(PeaceParser.Digits, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDigitExpr" ):
                listener.enterDigitExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDigitExpr" ):
                listener.exitDigitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDigitExpr" ):
                return visitor.visitDigitExpr(self)
            else:
                return visitor.visitChildren(self)


    class CompExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PeaceParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PeaceParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PeaceParser.ExpressionContext,i)

        def LessThan(self):
            return self.getToken(PeaceParser.LessThan, 0)
        def GreaterThan(self):
            return self.getToken(PeaceParser.GreaterThan, 0)
        def LessThanOrEq(self):
            return self.getToken(PeaceParser.LessThanOrEq, 0)
        def GreaterThanOrEq(self):
            return self.getToken(PeaceParser.GreaterThanOrEq, 0)
        def Equal(self):
            return self.getToken(PeaceParser.Equal, 0)
        def NotEqual(self):
            return self.getToken(PeaceParser.NotEqual, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompExpr" ):
                listener.enterCompExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompExpr" ):
                listener.exitCompExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompExpr" ):
                return visitor.visitCompExpr(self)
            else:
                return visitor.visitChildren(self)


    class FuncPointCreateExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PeaceParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Amp(self):
            return self.getToken(PeaceParser.Amp, 0)
        def Identifier(self):
            return self.getToken(PeaceParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncPointCreateExpr" ):
                listener.enterFuncPointCreateExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncPointCreateExpr" ):
                listener.exitFuncPointCreateExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncPointCreateExpr" ):
                return visitor.visitFuncPointCreateExpr(self)
            else:
                return visitor.visitChildren(self)


    class FuncCallOrEnumExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PeaceParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PeaceParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PeaceParser.ExpressionContext,i)

        def LParen(self):
            return self.getToken(PeaceParser.LParen, 0)
        def RParen(self):
            return self.getToken(PeaceParser.RParen, 0)
        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(PeaceParser.Comma)
            else:
                return self.getToken(PeaceParser.Comma, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCallOrEnumExpr" ):
                listener.enterFuncCallOrEnumExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCallOrEnumExpr" ):
                listener.exitFuncCallOrEnumExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCallOrEnumExpr" ):
                return visitor.visitFuncCallOrEnumExpr(self)
            else:
                return visitor.visitChildren(self)


    class AssignExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PeaceParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PeaceParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PeaceParser.ExpressionContext,i)

        def Assign(self):
            return self.getToken(PeaceParser.Assign, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignExpr" ):
                listener.enterAssignExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignExpr" ):
                listener.exitAssignExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignExpr" ):
                return visitor.visitAssignExpr(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PeaceParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PeaceParser.Digits]:
                localctx = PeaceParser.DigitExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 52
                self.match(PeaceParser.Digits)
                pass
            elif token in [PeaceParser.FloatConst]:
                localctx = PeaceParser.FloatExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 53
                self.match(PeaceParser.FloatConst)
                pass
            elif token in [PeaceParser.Identifier]:
                localctx = PeaceParser.IdentExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 54
                self.match(PeaceParser.Identifier)
                pass
            elif token in [PeaceParser.StringLiteral]:
                localctx = PeaceParser.StringLiteralExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 55
                self.match(PeaceParser.StringLiteral)
                pass
            elif token in [PeaceParser.BoolTrue, PeaceParser.BoolFalse]:
                localctx = PeaceParser.BoolExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 56
                _la = self._input.LA(1)
                if not(_la==PeaceParser.BoolTrue or _la==PeaceParser.BoolFalse):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [PeaceParser.Amp]:
                localctx = PeaceParser.FuncPointCreateExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 57
                self.match(PeaceParser.Amp)
                self.state = 58
                self.match(PeaceParser.Identifier)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 89
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 87
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = PeaceParser.ArithmeticExprContext(self, PeaceParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 61
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 62
                        self.op()
                        self.state = 63
                        self.expression(6)
                        pass

                    elif la_ == 2:
                        localctx = PeaceParser.CompExprContext(self, PeaceParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 65
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 66
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PeaceParser.LessThan) | (1 << PeaceParser.GreaterThan) | (1 << PeaceParser.LessThanOrEq) | (1 << PeaceParser.GreaterThanOrEq) | (1 << PeaceParser.Equal) | (1 << PeaceParser.NotEqual))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 67
                        self.expression(5)
                        pass

                    elif la_ == 3:
                        localctx = PeaceParser.AssignExprContext(self, PeaceParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 68
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 69
                        self.match(PeaceParser.Assign)
                        self.state = 70
                        self.expression(3)
                        pass

                    elif la_ == 4:
                        localctx = PeaceParser.FuncCallOrEnumExprContext(self, PeaceParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 71
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 72
                        self.match(PeaceParser.LParen)
                        self.state = 83
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PeaceParser.BoolTrue) | (1 << PeaceParser.BoolFalse) | (1 << PeaceParser.Amp) | (1 << PeaceParser.Identifier) | (1 << PeaceParser.Digits) | (1 << PeaceParser.FloatConst) | (1 << PeaceParser.StringLiteral))) != 0):
                            self.state = 73
                            self.expression(0)
                            self.state = 78
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==PeaceParser.Comma:
                                self.state = 74
                                self.match(PeaceParser.Comma)
                                self.state = 75
                                self.expression(0)
                                self.state = 80
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)

                            self.state = 85
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 86
                        self.match(PeaceParser.RParen)
                        pass

             
                self.state = 91
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class VardecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Let(self):
            return self.getToken(PeaceParser.Let, 0)

        def Identifier(self):
            return self.getToken(PeaceParser.Identifier, 0)

        def Colon(self):
            return self.getToken(PeaceParser.Colon, 0)

        def atype(self):
            return self.getTypedRuleContext(PeaceParser.AtypeContext,0)


        def Assign(self):
            return self.getToken(PeaceParser.Assign, 0)

        def expression(self):
            return self.getTypedRuleContext(PeaceParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PeaceParser.RULE_vardec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardec" ):
                listener.enterVardec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardec" ):
                listener.exitVardec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardec" ):
                return visitor.visitVardec(self)
            else:
                return visitor.visitChildren(self)




    def vardec(self):

        localctx = PeaceParser.VardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(PeaceParser.Let)
            self.state = 93
            self.match(PeaceParser.Identifier)
            self.state = 94
            self.match(PeaceParser.Colon)
            self.state = 95
            self.atype()
            self.state = 96
            self.match(PeaceParser.Assign)
            self.state = 97
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PeaceParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfStmtContext(StatementContext):
